--- a/api/composer.json
+++ b/api/composer.json
@@ -15,5 +15,8 @@
     "require": {
         "steampixel/simple-php-router": "^0.7.1",
         "vlucas/phpdotenv": "^5.5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
     }
 }
