--- a/api/composer.json
+++ b/api/composer.json
@@ -17,6 +17,7 @@
         "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
