--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -25,7 +25,7 @@ jobs:
         run: composer install
 
       - name: Run tests
-        run: ./vendor/bin/phpunit tests
+        run: ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests/
 
       - name: Run phpcs
         run: ./vendor/bin/phpcs src/ && ./vendor/bin/phpcs tests/
