--- a/api/composer.json
+++ b/api/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Kesa\\Sacculum\\Core\\": ["src/core"]
+            "Kesa\\Sacculum\\Core\\": ["src/core"],
+            "Kesa\\Sacculum\\Core\\Exception\\": ["src/core/Exception"]
         }
     },
     "authors": [
