--- a/api/composer.json
+++ b/api/composer.json
@@ -15,10 +15,12 @@
     ],
     "require": {
         "steampixel/simple-php-router": "^0.7.1",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "guzzlehttp/guzzle": "^7.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "behat/behat": "^3.12"
     }
 }
