feat: remove behat from ci

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -4,6 +4,7 @@ on:
     branches-ignore:
       - master
     paths:
+      - '.github/**'
       - 'api/**'
 
 jobs:
@@ -26,9 +27,6 @@ jobs:
 
       - name: Run PHPUnit tests
         run: ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests/
-
-      - name: Run Behat tests
-        run: ./vendor/bin/behat
 
       - name: Run phpcs
         run: ./vendor/bin/phpcs src/ && ./vendor/bin/phpcs tests/
