--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -28,5 +28,10 @@ jobs:
       - name: Run PHPUnit tests
         run: ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests/
 
+      - name: Run Behat tests
+        run: |
+          nohup php -S localhost:80 -t src/ &
+          ./vendor/bin/behat
+
       - name: Run phpcs
         run: ./vendor/bin/phpcs src/ && ./vendor/bin/phpcs tests/
